Block styles: Ensure top brush banner is always above other blocks
This z-index might be too low, but I don't want to set something arbitrarily high. It can be increased with a note if needed.

--- a/source/wp-content/themes/wporg-parent-2021/sass/block-styles.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/block-styles.scss
@@ -386,6 +386,7 @@
 	main > .is-style-brush-stroke:first-child {
 		position: sticky;
 		top: var(--wp-global-header-offset, 0);
+		z-index: 50;
 	}
 }
 
